# autopilot-pc

./: .output.txt  AircraftNameProvider.h  AutopilotController.cpp  AutopilotController.h  AutopilotDataReader.cpp  AutopilotDataReader.h  AutopilotManager.h  AutopilotReader.h  AutopilotValues.h  AutopilotWriteField.h  AutopilotWriter.h  CLAUDE.md  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  Communication protocol.txt  GameClient.h  HeadingReader.cpp  HeadingReader.h  NewMain.cpp  SdkConnection.h  SdkReadConnection.h  SdkWriteConnection.h  Serial.h  SerialConnection.h  SerialPortReader.cpp  SerialPortReader.h  SerialUpdatesSender.h  SimConnect.h  SimConnectClient.cpp  SimConnectClient.h  SimConnectReadonlyField.h  main.cpp
.claude/: settings.local.json
aircrafts/: Airbus320Writer.h  AirbusWriter.h  AutopilotWriter747.h  VisionJetWriter.h
autopilot/: AutopilotManager.h  DependencyResolver.h  FakeDependencyResolver.h  MSFSDependencyResolver.h
autopilot/rw/: AircractNameProvider.h  AircraftNameProvider.h  AutopilotReader.h  AutopilotValues.h  AutopilotWriteField.h  AutopilotWriter.h  FakeAircraftNameProvider.h  FakeAutopilotReader.h  FakeAutopilotWriter.h  FakeInputEventsProvider.h  InputEventsProvider.h  MSFSAircraftNameProvider.h  MSFSAutopilotReader.h  MSFSAutopilotWriter.h  MSFSInputEventsProvider.h
autopilot/sdk/: DoubleValue.h  SdkConnectionMutex.h  SdkReadConnection.h  SdkWriteConnection.h
serial/: CommandProcessor.h  Serial.h  SerialCommandDiff.h  SerialConnection.h  SerialUpdatesSender.h
tcp/: TcpServer.h
tests/: SerialCommandDiffTest.cpp
